--- a/pages/jimmy.html
+++ b/pages/jimmy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/jimmy.css">
   </head>
   
   <body>
@@ -13,19 +13,19 @@
           <li class="nav_item"><a class="logo"></a></li>
           <ul class="nav_list">
             <li class="nav_item">
-              <a class="nav_link" href="/">
+              <a class="nav_link" href="../index.html">
                 <span aria-hidden="false"></span>
                 Home
               </a>
             </li>
             <li class="nav_item">
-              <a class="nav_link" href="pages/jimmy.html">
+              <a class="nav_link" href="jimmy.html">
                 <span aria-hidden="false"></span>
                 Jimmy's Zoo
               </a>
             </li>
             <li class="nav_item">
-              <a class="nav_link" href="/pages/vinson.html">
+              <a class="nav_link" href="vinson.html">
                 <span aria-hidden="false"></span>
                 Vinson's Zoo
               </a>
