created webpage for animal 1

--- a/pages/jimmy.html
+++ b/pages/jimmy.html
@@ -38,7 +38,7 @@
     <div class="content">
         <div class="content_animal" id="zebra">
           <img src="https://kubrick.htvapps.com/htv-prod-media.s3.amazonaws.com/images/dot-and-mom-aziza-2-649f050319cb3.jpg?crop=1.00xw:0.846xh;0,0.154xh&resize=900:*">
-          <button><a class="link_button" href="../index.html">Learn More!</a></button>
+          <button><a class="link_button" href="/pages/jimmy's animals/animal1.html">Learn More!</a></button>
           <div class="title">
               <h2>White With Black Stripes? Zebras!</h2>
         </div>
