webpage for animal 4 created, some information about animal added

--- a/pages/jimmy.html
+++ b/pages/jimmy.html
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="content_animal" id="elephant">
-          <button><a class="link_button" href="../index.html">Learn More!</a></button>
+          <button><a class="link_button" href="/pages/jimmy's animals/animal4.html">Learn More!</a></button>
           <img src="https://i.natgeofe.com/k/e7ba8001-23ac-457f-aedb-abd5f2fdda62/moms5_16x9.png">
           <div class="title">
             <h2>Elephants!</h2>
