changed font size of about and fact text

--- a/pages/jimmy's animals/animal1.html
+++ b/pages/jimmy's animals/animal1.html
@@ -54,7 +54,7 @@
       </div>
 			<div class="fact" id="fact3">
 				<h2 class="heading">Fun Facts!</h2>
-				<p>1) A zebra's stripes are like human fingerprints. Each zebra has its own unique pattern-no two are alike</p>
+				<p>1) A zebra's stripes are like human fingerprints. Each zebra has its own unique pattern</p>
 				<p>2) White-colored stripes are cooler than their black ones</p>
 				<p>3) Zebras can sleep standing up</p>
 			</div>
