--- a/pages/animals_jimmy/animal3.html
+++ b/pages/animals_jimmy/animal3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link rel="stylesheet" href="/pages/jimmy's animals/css/animal3.css">
+    <link rel="stylesheet" href="/pages/animals_jimmy/animal3.html">
   </head>
   
   <body>
