--- a/lion.html
+++ b/lion.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link rel="stylesheet" href="/css/animal-webpage-jimmy.css">
+    <link rel="stylesheet" href="/css/animalwebpageJimmy.css">
   </head>
   
   <body>
