--- a/giraffe.html
+++ b/giraffe.html
@@ -13,19 +13,19 @@
           <li class="nav_item"><a class="logo"></a></li>
           <ul class="nav_list">
             <li class="nav_item">
-              <a class="nav_link" href="/">
+              <a class="nav_link" href="index.html">
                 <span aria-hidden="false"></span>
                 Home
               </a>
             </li>
             <li class="nav_item">
-              <a class="nav_link" href="../jimmy.html">
+              <a class="nav_link" href="jimmy.html">
                 <span aria-hidden="false"></span>
                 Jimmy's Zoo
               </a>
             </li>
             <li class="nav_item">
-              <a class="nav_link" href="../vinson.html">
+              <a class="nav_link" href="vinson.html">
                 <span aria-hidden="false"></span>
                 Vinson's Zoo
               </a>
