added more information on animals

--- a/elephant.html
+++ b/elephant.html
@@ -43,8 +43,10 @@
 	</div>
 		<div class = "facts">
 			<div class="fact" id="fact1">
-				<h2 class="heading">Acceptance Criteria</h2>
-				<p></p>	
+				<h2>Loxodonta africana | cyclotis, Elephas maximus</h2>
+        <p>Type: Mammal Family: Elephantidae</p>
+        <p>Species: africana (African), cyclotis (African forest), and maximus (Asian)</p>
+        <p>Subspecies: 3</p>
 			</div>
 			<div class="fact" id="fact2">
 				<h2 class="heading">Size & Weight</h2>
@@ -67,7 +69,7 @@
 				There are three living species currently recognized: African bush, African forest, and Asian elephant. African savannah
 				elephants are the largest of the species, with the African forest and Asian elelphants are smaller.
 				African elephants grow tusks that serve a variety of purposes: protection, move things, and gather food.
-				Populations have been experience significant decline over the last century due to poachers.
+				Populations have been experience significant decline over the last century due to poachers who value their tusks.
 			</div>
 
 	</div>
