--- a/giraffe.html
+++ b/giraffe.html
@@ -43,8 +43,10 @@
 	</div>
 		<div class = "facts">
 			<div class="fact" id="fact1">
-				<h2 class="heading">Acceptance Criteria</h2>
-				<p></p>	
+				<h2>Giraffa camelopardalis</h2>
+        <p>Type: Mammal Family: Giraffidae</p>
+        <p>Genus: Giraffa</p>
+        <p>Subspecies: 9</p>	
 			</div>
 			<div class="fact" id="fact2">
 				<h2 class="heading">Size & Weight</h2>
@@ -62,8 +64,10 @@
 		<div class="about">
 			<h2>About!</h2>
 			<p>Giraffes come from the African savanna area. They are the tallest mammals on earth. A giraffe can 
-				be as tall as 14 feet to 19 feet! All giraffes are tan with spotted coats. 
-				Each one of them has a different patter, making them unique
+				be as tall as 14 feet to 19 feet! All giraffes are tan with spotted coats. Their coat colors depend on what
+        they consume and where they live. Each one of them has a different pattern, making them unique. Giraffes are capable of
+        making sounds like: moos, roars, hisses, and grunts-rarely, however! Giraffes are often early warning signals for wildlife,
+        Giraffes are capable of resting while standing up, but can also lie down-though they are vulnerable when they do.
 		</div>
 
 	</div>
