--- a/lion.html
+++ b/lion.html
@@ -43,8 +43,10 @@
 	</div>
 		<div class = "facts">
 			<div class="fact" id="fact1">
-				<h2 class="heading">Acceptance Criteria</h2>
-				<p></p>	
+				<h2>Panthera Leo</h2>
+        <p>Type: Mammal Family: Felidae</p>
+        <p>Genus: Panthera</p>
+        <p>Subspecies: 400 to 460</p>
 			</div>
 			<div class="fact" id="fact2">
 				<h2 class="heading">Size & Weight (Female/Male)</h2>
@@ -64,8 +66,10 @@
 		<div class="about">
 			<h2>About!</h2>
 			<p>Lions are one of the most social felines. They live in groups called prides, which comrpises of several individuals
-				-from 3 to up to 30 or more! Lions and lionesse have different roles in the pride. Lionesse are responsible for hunting
-				and rearing the cubs. Lions guard the cubs while the lionesse hunts.  
+				-from 3 to up to 30 or more! Lions and lionesse have different roles in the pride. Lions that do not live in prides
+        are called nomads, and they follow migrating herds of large game. They are generally young males and roam in small groups
+        .Lionesse are responsible for hunting and rearing the cubs. Lions guard the cubs while the lionesse hunts. Lions usually hunt
+        baby elephants, hyenas, cheetahs, and even large animals like giraffes. 
 				Adult male lions are much larger than females and have impressive mane of hair around their neck.</p>
 		</div>
 
