--- a/zebra.html
+++ b/zebra.html
@@ -43,8 +43,10 @@
 		</div>
 		<div class = "facts">
 			<div class="fact" id="fact1">
-				<h2 class="heading">Acceptance Criteria</h2>
-				<p></p>	
+				<h2>Equus zebra, E. quagga, E. grevyi</h2>
+        <p>Type: Mammal Family: Equidae</p>
+        <p>Genus: Equus</p>
+        <p>Subspecies: 7</p>
 			</div>
 			<div class="fact" id="fact2">
 				<h2 class="heading">Size & Weight</h2>
