Completed Panda page with information in regards to a panda's life

--- a/vinson.html
+++ b/vinson.html
@@ -19,13 +19,13 @@
               </a>
             </li>
             <li class="nav_item">
-              <a class="nav_link" href="jimmy.html">
+              <a class="nav_link" href="../jimmy.html">
                 <span aria-hidden="false"></span>
                 Jimmy's Zoo
               </a>
             </li>
             <li class="nav_item">
-              <a class="nav_link" href="/pages/vinson.html">
+              <a class="nav_link" href="../vinson.html">
                 <span aria-hidden="false"></span>
                 Vinson's Zoo
               </a>
