Added Penguin Page and descriptions of the animal

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               </a>
             </li>
             <li class="nav_item">
-              <a class="nav_link" href="/pages/vinson.html">
+              <a class="nav_link" href="../vinson.html">
                 <span aria-hidden="false"></span>
                 Vinson's Zoo
               </a>
