added Gorilla page and its descriptions

--- a/VinZoo/kangoroo.html
+++ b/VinZoo/kangoroo.html
@@ -58,7 +58,7 @@
 </div>
 <div class = "Card">
   <div class = "CardImage food"></div>
-  <h2> Kangoroo's Diet </h2>
+  <h2> Kangaroo's Diet </h2>
   <p> Kangaroos are herbivores with a diet mainly comprising grasses and plants. They graze on a variety of vegetation, utilizing their specialized teeth for efficient chewing. Kangaroos have a unique ability to extract moisture from their food, allowing them to thrive in the arid regions of their native Australia, where water sources may be scarce. </p>
 </div>
   </body>
