--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <li class="nav_item"><a class="logo"></a></li>
           <ul class="nav_list">
             <li class="nav_item">
-              <a class="nav_link" href="index.html">
+              <a class="nav_link" href="jimmy.html">
                 <span aria-hidden="false"></span>
                 Home
               </a>
