removed unused files, changed stylesheet path

--- a/jimmy.html
+++ b/jimmy.html
@@ -44,7 +44,7 @@
         </div>
         </div>
         <div class="content_animal" id="lion">
-          <button><a class="link_button" href="/JimZoo/lion.html">Learn More!</a></button>
+          <button><a class="link_button" href="./JimZoo/lion.html">Learn More!</a></button>
           <img src="https://media.istockphoto.com/id/1478313319/photo/male-lion.jpg?b=1&s=170667a&w=0&k=20&c=plYvl6Dft0rG-caolRQfeKM7VKW0J4OmhpEe_AH6EP0=">
           <div class="title">
             <h2>Beautiful and Majestic, Lions!</h2>
