--- a/VinZoo/kangoroo.html
+++ b/VinZoo/kangoroo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link rel="stylesheet" href="/css/kangoroo.css">
+    <link rel="stylesheet" href="../css/kangoroo.css">
   </head>
   
   <body>
