--- a/JimZoo/zebra.html
+++ b/JimZoo/zebra.html
@@ -19,7 +19,7 @@
               </a>
             </li>
             <li class="nav_item">
-              <a class="nav_link" href="../jiimmy.html">
+              <a class="nav_link" href="../jimmy.html">
                 <span aria-hidden="false"></span>
                 Jimmy's Zoo
               </a>
