added background images

--- a/JimZoo/giraffe.html
+++ b/JimZoo/giraffe.html
@@ -37,8 +37,8 @@
     <div class="animal_heading">
       <h2>Giraffes</h2>
     </div>
-	<div class="content">
-    <div class="image">
+    <div style="background-image: url(../img/giraffe.jpg); background-size:100%;" class="content">
+      <div class="image">
 		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Giraffe_Mikumi_National_Park.jpg/1200px-Giraffe_Mikumi_National_Park.jpg">
 	</div>
 		<div class = "facts">
