--- a/JimZoo/lion.html
+++ b/JimZoo/lion.html
@@ -37,7 +37,7 @@
     <div class="animal_heading">
       <h2>Lions</h2>
     </div>
-	<div class="content">
+	<div style="background-image: url(../img/lion.jpg); background-position: bottom -500px center;" class="content">
     <div class="image">
 		<img src="https://media.istockphoto.com/id/1478313319/photo/male-lion.jpg?b=1&s=170667a&w=0&k=20&c=plYvl6Dft0rG-caolRQfeKM7VKW0J4OmhpEe_AH6EP0=">
 	</div>
