--- a/JimZoo/zebra.html
+++ b/JimZoo/zebra.html
@@ -37,7 +37,7 @@
     <div class="animal_heading">
       <h2>Zebras</h2>
     </div>
-	<div class="content">
+	<div style="background-image: url(../img/zebra.jpg); background-size:100%;" class="content">
     <div class="image">
 			<img src="https://kubrick.htvapps.com/htv-prod-media.s3.amazonaws.com/images/dot-and-mom-aziza-2-649f050319cb3.jpg?crop=1.00xw:0.846xh;0,0.154xh&resize=900:*">
 		</div>
