added heading w/ animal name

--- a/VinZoo/panda.html
+++ b/VinZoo/panda.html
@@ -37,6 +37,9 @@
 
 
     </div>
+    <div class="animal_heading">
+      <h2>Panda</h2>
+    </div>
     <div class = "CardContainer">
       <div class = "Card">
           <div class = "CardImage Location"></div>
