--- a/VinZoo/penguin.html
+++ b/VinZoo/penguin.html
@@ -38,6 +38,9 @@
 
     </div>
 </div>
+<div class="animal_heading">
+  <h2>Penguin</h2>
+</div>
 <div class = "CardContainer">
   <div class = "Card">
       <div class = "CardImage Home"></div>
