--- a/VinZoo/gorilla.html
+++ b/VinZoo/gorilla.html
@@ -38,6 +38,9 @@
 
     </div>
 </div>
+<div class="animal_heading">
+  <h2>Gorilla</h2>
+</div>
 <div class = "CardContainer">
   <div class = "Card">
       <div class = "CardImage GorillaHome"></div>
