--- a/VinZoo/kangoroo.html
+++ b/VinZoo/kangoroo.html
@@ -38,6 +38,9 @@
 
     </div>
 </div>
+<div class="animal_heading">
+  <h2>Kangoroo</h2>
+</div>
 <div class = "CardContainer">
   <div class = "Card">
       <div class = "CardImage Austrilia"></div>
