added Images and a Banner for Index page

--- a/index.html
+++ b/index.html
@@ -37,5 +37,34 @@
 
 
     </div>
+    <div class ="imgcontainer">
+      <div class = "text">
+        <h1>Welcome to Vinson and Jimmy's Zoo</h1>
+        <p>Welcome to Vinson and Jimmy's Zoo, where you can embark on a captivating journey through the animal kingdom. Founded by Vinson and Jimmy, our zoo boasts a remarkable array of creatures from around the world. From the awe-inspiring African lions to the enchanting Asian elephants, our animals are at the heart of our passion. Beyond the animal encounters, we offer daily presentations and interactive exhibits, fostering education and awareness about conservation. Explore our website to meet our animal residents, stay informed about upcoming events, and join us in preserving wildlife and their habitats. Vinson and Jimmy's Zoo is where the wild comes to life!</p>
+      </div>
+    </div>
+    <div class="heading">
+      <h1> Our Zoo</h1>
+    </div>
+    <div class = "CardContainer">
+      <div class = "Card">
+          <div class = "CardImage Vinson"></div>
+          <h2> Vinson's Zoo </h2>
+          <p> Vinson's Zoo boasts a rare and unique collection of animals, including penguins, kangaroos, pandas, and gorillas. These captivating creatures hail from specific regions worldwide, making Vinson's Zoo a remarkable destination for wildlife enthusiasts seeking to encounter these extraordinary and rarely seen species up close.
+         click here to learn more about Vinson's Zoo
+          </p>
+          <a href = "vinson.html"> Read More </a>
+      </div>
+      <div class = "Card">
+        <div class = "CardImage Jimmy"></div>
+        <h2> Jimmy's Zoo </h2>
+        <p>Jimmy's Zoo is a beloved wildlife haven featuring captivating animals like majestic lions, graceful zebras, gentle elephants, and towering giraffes. Visitors can explore each species with detailed profiles, vibrant images, and fascinating facts, enhancing their zoo experience and fostering a deeper connection with the animal kingdom.
+          click here to learn more about Jimmy's Zoo
+
+        </p>
+        <a href = "jimmy.html"> Read More </a>
+    </div>
+    </div>
+
   </body>
 </html>
