added background to header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/index.css ">
   </head>
   
   <body>
@@ -39,7 +39,7 @@
     </div>
     <div class ="imgcontainer">
       <div class = "text">
-        <h1>Welcome to Vinson and Jimmy's Zoo</h1>
+        <h1 class="heading">Welcome to Vinson and Jimmy's Zoo</h1>
         <p>Welcome to Vinson and Jimmy's Zoo, where you can embark on a captivating journey through the animal kingdom. Founded by Vinson and Jimmy, our zoo boasts a remarkable array of creatures from around the world. From the awe-inspiring African lions to the enchanting Asian elephants, our animals are at the heart of our passion. Beyond the animal encounters, we offer daily presentations and interactive exhibits, fostering education and awareness about conservation. Explore our website to meet our animal residents, stay informed about upcoming events, and join us in preserving wildlife and their habitats. Vinson and Jimmy's Zoo is where the wild comes to life!</p>
       </div>
     </div>
